test/core/errors/sql_tables_error/zs/unknown_primary_key_column_error.zs
package unknown_primary_key_column_error;

sql_table TestTable
{
    int32       schoolId;
    int32       classId;
    int32       studentId;

    sql "PRIMARY KEY (unknownColumn)";
};
